syntax = "proto3";

service Kademlia {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Store (StoreRequest) returns (StoreResponse);
  rpc FindNode (FindNodeRequest) returns (FindNodeResponse);
  rpc FindValue (FindNodeRequest) returns (FindValueResponse);
}

message PingRequest {
    string sender = 1;
    string destination = 2;
}

message PingResponse {
    string sender = 1;
    string response = 2;
}

message StoreRequest {
    string sender = 1;
    bytes value = 2;
}

message StoreResponse {
    string sender = 1;
    string hash = 2;
}

message FindNodeRequest {
    string sender = 1;
    string  nodeId = 2;
}

message FindNodeResponse {
    string sender = 1;
    repeated string ids = 2;
}

message FindValueResponse {
    string sender = 1;
    bytes value = 2;
}